--- a/template.html
+++ b/template.html
@@ -1,64 +1,76 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Vitugo</title>
 </head>
+
 <body>
+
     <a id="top"></a>
+
     <div class="wrap">
+
         <header>
-            <a href="" title="Página Inicial"><img src="/img/logo01.png" alt="Logotipo de Vitugo"></a>
+
+            <a href="/" title="Página inicial"><img src="/img/logo01.png" alt="Logotipo de Vitugo"></a>
+
             <h1>Vitugo<small>Quem tem fome tem pressa.</small></h1>
+
         </header>
+
         <nav>
-                <a href="/" title="Página Inicial">
-                    <i class="fa-solid fa-house-chimney"></i><span>Início</span>
-                </a>
-                <a href="/contatos" title="Faça Contato">
-                    <i class="fa-solid fa-comment-dots"></i><span>Contatos</span>
-                </a>
-                <a href="/sobre" title="Sobre">
-                    <i class="fa-solid fa-circle-info"></i><span>Sobre</span>
-                </a>
-                <a href="/usuario" title="Usuário">
-                    <i class="fa-solid fa-user"></i><span>Usuário</span>
-                </a>
+
+            <a href="/" title="Página inicial"><i class="fa-solid fa-house-chimney"></i><span>Início</span></a>
+
+            <a href="/contatos" title="Faça contato"><i class="fa-solid fa-comment-dots"></i><span>Contatos</span></a>
+
+            <a href="/sobre" title="Sobre..."><i class="fa-solid fa-circle-info"></i><span>Sobre</span></a>
+
+            <a href="/usuario" title="Usuário"><i class="fa-solid fa-user"></i><span>Usuário</span></a>
+
         </nav>
+
         <main>
+
             <section>
-                <h2>Título da Página</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum asperiores, unde assumenda quam
-                     dignissimos repudiandae placeat vel suscipit dolorum quod odio provident quidem odit ab. 
-                    Eius odit totam explicabo corrupti!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium asperiores delectus. 
-                    Reprehenderit tempore quasi esse labore facere accusamus nemo praesentium unde est. 
-                    Voluptatem quia incidunt rerum aut doloribus doloremque.
-                </p>
+
+                <h2>Título da página</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, iste aliquam aperiam voluptatem
+                    molestias nemo odit unde modi cupiditate exercitationem doloremque quaerat soluta rerum quidem
+                    dignissimos officiis sapiente, aut alias!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio soluta voluptatum consequatur
+                    voluptatibus cupiditate temporibus qui, nostrum deserunt minus laudantium in officia rem dignissimos
+                    facilis modi culpa error aliquam? Quam?</p>
+
             </section>
+
             <aside>
+
                 <h3>Lateral</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Perferendis ducimus fugiat sunt velit!
-                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, aperiam corporis culpa consequatur
+                    iusto.</p>
+
             </aside>
+
         </main>
+
         <footer>
-            <a href="/" title="Página inicial">
-                <i class="fa-solid fa-house-chimney"></i>
-            </a>
+
+            <a href="/" title="Página inicial"><i class="fa-solid fa-house-chimney"></i></a>
+
             <div>&copy; Copyright 2022 Vitugo.</div>
-            <a href="#top" title="Topo da Página">
-                <i class="fa-solid fa-circle-up"></i>
-            </a>
+
+            <a href="#top" title="Topo da página"><i class="fa-solid fa-circle-up"></i></a>
+
         </footer>
+
     </div>
+
 </body>
+
 </html>
